# django-boilerplate

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  pyproject.toml
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/customers/: routers.py  schemas.py
core/api/v1/products/: routers.py  schemas.py
core/api/v1/reviews/: routers.py  schemas.py
core/apps/common/: exceptions.py
core/apps/customers/: admin.py  apps.py
core/apps/customers/entities/: customers.py
core/apps/customers/exceptions/: base.py  codes.py  customers.py
core/apps/customers/migrations/: 0001_initial.py  0002_alter_customermodel_token.py
core/apps/customers/models/: customers.py
core/apps/customers/services/: auth.py  base.py  codes.py  customers.py  senders.py
core/apps/products/: admin.py
core/apps/products/entities/: reviews.py
core/apps/products/exceptions/: base.py  products.py  reviews.py
core/apps/products/filters/: products.py
core/apps/products/migrations/: 0001_initial.py  0002_rename_product_productmodel.py  0003_alter_productmodel_options_and_more.py
core/apps/products/models/: products.py  reviews.py
core/apps/products/services/: base.py  products.py  reviews.py
core/apps/products/use_cases/reviews/: create.py
core/project/: containers.py  urls.py
core/project/settings/: main.py
docker_compose/: app.yaml  monitoring.yaml  storages.yaml
tests/factories/products/: products.py
tests/services/: conftest.py  test_products.py
