[tool.poetry]
name = "boilerplate-django"
version = "0.1.0"
description = ""
authors = ["leks <vollkovalex1991@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
