[tool.poetry]
name = "boilerplate-django"
version = "0.1.0"
description = ""
authors = ["leks <vollkovalex1991@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
django-environ = "^0.11.2"
django-ninja = "^1.1.0"


[tool.poetry.group.lint.dependencies]
ruff = "^0.4.6"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-django = "^4.8.0"
faker = "^25.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
